Documento: Introducción terminada.

--- a/ThesisLatex/Bibliog.bib
+++ b/ThesisLatex/Bibliog.bib
@@ -425,5 +425,17 @@
   publisher=	{John Wiley and Sons.}
 }
 
+@book{wall1991limits,
+  title=	{Limits of instruction-level parallelism},
+  author=	{Wall, David W},
+  volume=	{19},
+  number=	{2},
+  year=		{1991},
+  publisher=	{ACM}
+}
 
-
+@article{gruska2004quantum,
+  title=	{QUANTUM COMPUTING 1.},
+  author=	{Gruska, Jozef},
+  year=		{2004}
+}
