--- a/ThesisLatex/Cap_1.tex
+++ b/ThesisLatex/Cap_1.tex
@@ -4,31 +4,33 @@
 
 \section{Motivación y Contexto}
 
-A pesar de su existencia aún restringida al campo teórico, la computación cuántica ofrece posibilidades que la computación tradicional no considera ni remotamente realizable, considerando en especial las limitaciones que comprende la Ley de Moore, la cual ha obligado a volcar la atención hacia la paralelización en búsqueda de un mayor aprovechamiento de los recursos de procesamiento. 
+A pesar de su existencia aún restringida al campo teórico, la computación cuántica ofrece posibilidades que la computación tradicional no considera ni remotamente realizables, considerando en especial las limitaciones actuales en procesamiento que han obligado a volcar la atención hacia la paralelización en búsqueda de un mayor aprovechamiento de los recursos \cite{wall1991limits}. 
 
-Sin embargo, es precisamente la no existencia de ordenadores cuánticos funcionales un limitante en este campo. Aún son pocos los algoritmos cuánticos verdaderos que serían capaces de aprovechar las posibilidades de la computación cuántica. No obstante, se busca aprovechar desde ya algunas de las características que ofrece la computación cuántica. Es aquí donde entran en acción los diversos algoritmos de inspiración cuántica, que buscan traer al paradigma tradicional elementos y fenómenos propios del paradigma cuántico con la ya característica búsqueda de un incremento de la performance, calidad de resultados y disminución de tiempos.
+Sin embargo, es precisamente la no existencia de ordenadores cuánticos funcionales un limitante en este campo. Aún son pocos los algoritmos cuánticos verdaderos que serían capaces de aprovechar las posibilidades de la computación cuántica \cite{gruska2004quantum}. No obstante, se busca aprovechar desde ya algunas de las características que ofrece la computación cuántica. Es aquí donde entran en acción diversos algoritmos de inspiración cuántica, que buscan traer al paradigma tradicional elementos y fenómenos propios del paradigma cuántico con la ya característica búsqueda de un incremento de la performance, calidad de resultados y disminución de tiempos.
 
-Dada la relativa novedad del campo, los algoritmos evolutivos de inspiración genética han sido todavía poco estudiados y explorados, por lo que es harto complicado no caer en cuenta de las grandes posibilidades y la libertad inherente a lo desconocido que conlleva la investigación en el área.
+Dada la relativa novedad del campo, los algoritmos evolutivos de inspiración genética han sido todavía poco estudiados y explorados, por lo que se avisoran grandes posibilidades en lo que concierne a la investigación en el área.
 
 \section{Planteamiento del Problema}
 
-Se puede afirmar con certeza que el grueso de soluciones a partir del algoritmo evolutivo de inspiración cuántica para $\mathbb{R}$ original contemplan actualizaciones globales para toda la población de individuos cuánticos \cite{nowotniak2014higher}. Si se logra independizar las actualizaciones para cada individuo cuántico, se podría ganar diversidad al momento de buscar óptimos. Además, se podría aplicar este tipo de algoritmos a funciones multimodales, al poder abarcar una mayor cantidad de óptimos locales.
+Se puede afirmar con certeza que el grueso de soluciones y aplicaciones a partir del algoritmo evolutivo de inspiración cuántica original contemplan actualizaciones de los individuos cuánticos basadas tanto en la evaluación de, como en la interacción entre individuos clásicos generados a partir de éstos \cite{nowotniak2014higher}. Esta visión es heredera del accionar propio de distintos tipos de algoritmos evolutivos estudiados y evaluados desde tiempo atrás que se pusiera ojos en la inspiración cuántica.
 
-Como se verá en el Capítulo 3, uno de los requerimientos para la formulación de un algoritmo de inspiración cuántica es la existencia de alguna interacción entre universos la cual ha de permitir hallar la solución o ayudar a que los sub-problemas al interior de cada universo puedan ser resueltos \cite{da2007algoritmos}. Este requerimiento se vería cumplido mediante una separación de los individuos cuánticos en universos únicos para cada cual, los cuales puedan compartir mutuamente sus mejoras para incrementar el espacio de búsqueda de cada cual.
+Se puede apreciar también que los individuos cuánticos en sí no son directamente evaluados, y mucho menos poseen una verdadera interacción entre sí. A pesar de ser la parte esencial de los algoritmos evolutivos de inspiración cuántica como generadores de individuos cuánticos, son estos últimos los que realmente presentan las características propias de los algoritmos evolutivos, tales como operadores de mutación y cruzamiento, entre otras.
+
+Como se verá en el Capítulo 3, uno de los requerimientos para la formulación de un algoritmo de inspiración cuántica es, de existir alguna separación del campo de búsqueda en universos, permitir la existencia de alguna interacción entre los mismos, la cual ha de permitir hallar la solución o ayudar a que los sub-problemas al interior de cada universo puedan ser resueltos \cite{da2007algoritmos}. Este requerimiento permitiría controlar de forma más eficiente el grado de actualización global y local, y podría verse cumplido mediante una separación de los espacios de acción de los respectivos individuos cuánticos en universos únicos, los cuales puedan compartir mutuamente sus mejoras para incrementar el espacio de búsqueda de cada cual. %De esta manera, los individuos cuánticos podrían ejecutar operadores que hasta el momento sólo se habían reservado para los individuos clásicos.
 
 \section{Objetivos}
 
-El objetivo primordial de esta tesis es la proposición de un control de actualización para el algoritmo evolutivo de inspiración cuántica en $\mathbb{R}$ que gradúe el grado de actualización global y local de cada individuo.
+El principal objetivo de la presente tesis es la evaluación del desempeño de un algoritmo evolutivo de inspiración cuántica para $\mathbb{R}$ que presente las características de segregación/interacción entre universos de operación para cada individuo cuántico en operación. La evaluación es comparativa y se hará con respecto al algoritmo evolutivo de inspiración cuántica en $\mathbb{R}$ original. Se busca evaluar y explorar el hecho de poder tener mayor control sobre el grado local y global de la actualización de cada individuo cuántico mediante la segregación del campo operativo de los mismos, así como la incorporación de un operador de cruzamiento que funcione a este nivel.
 
 \subsection{Objetivos Específicos}
 
 \begin{itemize}
- \item Estudiar el algoritmo evolutivo de inspiración cuántica en $\mathbb{R}$, comprender sus características y factibilidad de aplicación.
- \item Controlar el grado de globalidad/localidad en la actualización de individuos cuánticos mediante el aislamiento de los individuos cuánticos en universos separados y la introducción de un operador de recombinación para la mejora y ampliación de los espacios de búsqueda de cada individuo cuántico.
- \item Realización de pruebas en funciones benchmark.
+ \item Estudiar el algoritmo evolutivo de inspiración cuántica en $\mathbb{R}$, comprender sus características y evaluar posibles escenarios de mejora con respecto al grado de globalidad/localidad de sus elementos.
+ \item Incrementar el grado de control tanto de la globalidad como de la localidad en la actualización de individuos cuánticos mediante el aislamiento de los individuos cuánticos en universos separados, así como mediante la introducción de un operador de recombinación para la mejora de los espacios de búsqueda de cada individuo cuántico.
+ \item Medición del desempeño tanto del algoritmo original como de las propuestas evaluadas mediante la realización de pruebas en funciones \textit{benchmark}.
 \end{itemize}
 
 
 \section{Organización de la tesis}
 
-El capítulo 2 busca hacer una revisión del estado del arte en el área de los algoritmos evolutivos de inspiración cuántica, incluyendo un apartado referido a los algoritmos evolutivos de inspiración cuántica en $\mathbb{R}$. El capítulo 3 contiene el marco teórico de la tesis, introduciendo los conceptos básicos en los campos de la computación cuántica, la computación evolutiva, y los propios algoritmos evolutivos de inspiración cuántica. El capítulo 4 explica el algoritmo que se propone en el presente trabajo, además de las condiciones y escenarios de prueba. El capítulo 5 muestra los resultados de las pruebas realizadas para el algoritmo propuesto. Finalmente, el capítulo 6 contiene las conclusiones obtenidas por la presente tesis, además de indicaciones adicionales y futuras oportunidades para la investigación en el campo.
+El capítulo 2 busca hacer una revisión del estado del arte en el área de los algoritmos evolutivos de inspiración cuántica, incluyendo un apartado referido a los algoritmos evolutivos de inspiración cuántica en $\mathbb{R}$. El capítulo 3 contiene el marco teórico de la tesis, introduciendo los conceptos básicos en los campos de la computación cuántica, la computación evolutiva, y los algoritmos evolutivos de inspiración cuántica. El capítulo 4 describe las características elegidas a ser evaluadas e implementadas sobre el algoritmo ya indicado. El capítulo 5 describe los escenarios de prueba condiciones, los escenarios elegidos y los resultados de los mismos. Finalmente, el capítulo 6 contiene las conclusiones obtenidas por la presente tesis, además de indicaciones adicionales y posibles escenarios para la investigación futuras en el campo.
