Documento: Propuesta al 80%.

--- a/ThesisLatex/Cap_3.tex
+++ b/ThesisLatex/Cap_3.tex
@@ -90,9 +90,9 @@ Por supuesto, los algoritmos evolutivos también presentan algunos inconvenientes
 \end{itemize}
 
 
-\section{Algoritmo Evolutivo de Inspiración Cuántica}
+\section{Algoritmos Evolutivos de Inspiración Cuántica}
 
-Los algoritmos evolutivos de inspiración cuántica buscan aprovechar los paradigmas de la física cuántica para mejorar su rendimiento al resolver problemas. Para la formulación de un algoritmo de inspiración cuántica se debe cumplir con los siguientes requerimientos:
+Los algoritmos evolutivos de inspiración cuántica buscan aprovechar los paradigmas de la física cuántica para mejorar su rendimiento al resolver problemas. El algoritmo evolutivo de inspiración cuántica original fue descrito originalmente en \cite{han2000genetic} y posteriormente analizado \cite{han2001analysis}. Como se puede ver en el capítulo anterior, han surgido buen número de variaciones y aplicaciones, todos basados en el original descrito a continuación. Para la formulación de un algoritmo de inspiración cuántica se debe cumplir con los siguientes requerimientos:
 
 \begin{itemize}
  \item Tener una representación numérica o un método para convertir en representación numérica.
@@ -104,9 +104,6 @@ Los algoritmos evolutivos de inspiración cuántica buscan aprovechar los paradigm
  \item Los cálculos deben ser independientes en cada universo.
  \item Debe haber alguna interacción entre universos, y ésta debe, al menos permitir hallar la solución, o ayudar a que cada sub-problema en cada universo sea capaz de encontrarla. 
 \end{itemize}
-
-
-El algoritmo evolutivo de inspiración cuántica original fue descrito originalmente en \cite{han2000genetic} y posteriormente analizado \cite{han2001analysis}. Como se puede ver en el capítulo anterior, han surgido buen número de variaciones y aplicaciones, todos basados en el original descrito a continuación.
 
 \ac{QIEA} emplea una representación denominada Q-bit -la cual equivale al qubit que puede representar ya sea a uno de los valores $\{0,1\}$ o a la superposición de ambos-, el cual está definida por dos valores $[\alpha,\beta]$
 
