--- a/ThesisLatex/Cap_1.tex
+++ b/ThesisLatex/Cap_1.tex
@@ -20,7 +20,7 @@ Como se verá en el Capítulo 3, uno de los requerimientos para la formulación de 
 
 \section{Objetivos}
 
-El principal objetivo de la presente tesis es la evaluación del desempeño de un algoritmo evolutivo de inspiración cuántica para $\mathbb{R}$ que presente las características de segregación/interacción entre universos de operación para cada individuo cuántico en operación. La evaluación es comparativa y se hará con respecto al algoritmo evolutivo de inspiración cuántica en $\mathbb{R}$ original. Se busca evaluar y explorar el hecho de poder tener mayor control sobre el grado local y global de la actualización de cada individuo cuántico mediante la segregación del campo operativo de los mismos, así como la incorporación de un operador de cruzamiento que funcione a este nivel.
+El principal objetivo de la presente tesis es la evaluación del desempeño de un algoritmo evolutivo de inspiración cuántica para $\mathbb{R}$ que presente las características de segregación/interacción entre universos de operación para cada individuo cuántico en operación. La evaluación es comparativa y se hará con respecto al algoritmo evolutivo de inspiración cuántica en $\mathbb{R}$ original. Se busca evaluar y explorar el hecho de poder tener mayor control sobre el grado de localidad y globalidad de la actualización de cada individuo cuántico mediante la segregación del campo operativo de los mismos, así como la incorporación de un operador de cruzamiento que funcione a este nivel.
 
 \subsection{Objetivos Específicos}
 
@@ -33,4 +33,4 @@ El principal objetivo de la presente tesis es la evaluación del desempeño de un 
 
 \section{Organización de la tesis}
 
-El capítulo 2 busca hacer una revisión del estado del arte en el área de los algoritmos evolutivos de inspiración cuántica, incluyendo un apartado referido a los algoritmos evolutivos de inspiración cuántica en $\mathbb{R}$. El capítulo 3 contiene el marco teórico de la tesis, introduciendo los conceptos básicos en los campos de la computación cuántica, la computación evolutiva, y los algoritmos evolutivos de inspiración cuántica. El capítulo 4 describe las características elegidas a ser evaluadas e implementadas sobre el algoritmo ya indicado. El capítulo 5 describe los escenarios de prueba condiciones, los escenarios elegidos y los resultados de los mismos. Finalmente, el capítulo 6 contiene las conclusiones obtenidas por la presente tesis, además de indicaciones adicionales y posibles escenarios para la investigación futuras en el campo.
+El capítulo 2 busca hacer una revisión del estado del arte en el área de los algoritmos evolutivos de inspiración cuántica, incluyendo un apartado referido a los algoritmos evolutivos de inspiración cuántica en $\mathbb{R}$. El capítulo 3 contiene el marco teórico de la tesis, introduciendo los conceptos básicos en los campos de la computación cuántica, la computación evolutiva, y los algoritmos evolutivos de inspiración cuántica. El capítulo 4 describe las características elegidas a ser implementadas y evaluadas sobre el algoritmo ya indicado. El capítulo 5 describe los escenarios de prueba condiciones, los escenarios elegidos y los resultados de los mismos. Finalmente, el capítulo 6 contiene las conclusiones obtenidas por la presente tesis, además de indicaciones adicionales y posibles escenarios para la investigación futuras en el campo.
